--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,76 @@
 #title {
     background-color: #ff4c68;
-    margin: 0;
+    color: #fff;
+
+
 
 }
 
+
+
 body {
-    padding: 0;
-    margin: 0;
+    font-family: 'Montserrat', sans-serif;
+
+}
+
+.navbar-brand {
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: bold;
+    font-size: 2.5rem;
+}
+
+.nav-item{
+    padding:  0 18px;
+
+
+}
+
+#title-image{
+    width:50%;
+    transform: rotate(30deg);
+    
+}
+
+.navbar{
+    padding:0 0 4.5rem;
+}
+
+.nav-link{
+    font-family: "Montserrat";
+    font-size: 1.2rem;
+}
+
+h1 {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900;
+    font-size: 3.5rem;
+}
+
+.container-fluid {
+    padding: 1rem 15%;
+    border: 3px solid purple;
+}
+
+
+
+
+nav {
+
+    position: relative;
+    margin: 1rem 0;
+
+
+}
+
+nav ul {
+    position: absolute;
+    right: 1rem;
+}
+
+.my-btn {
+    border-radius: 2rem !important;
+}
+
+.left-column{
+    text-align: center;
 }
