--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,28 @@
+.b-green{
+     border:2px solid green;
+
+     
+}
+
+
 #title {
     background-color: #ff4c68;
     color: #fff;
 
+}
+
+body {
+    font-family: 'Montserrat', sans-serif;
 
 
 }
 
+.left-column{
+    font-size:3rem;
+}
 
-
-body {
-    font-family: 'Montserrat', sans-serif;
+.right-column{
+    text-align: center;
 
 }
 
@@ -19,23 +32,18 @@ body {
     font-size: 2.5rem;
 }
 
-.nav-item{
-    padding:  0 18px;
+.nav-item {
+    padding: 0 18px;
 
 
 }
 
-#title-image{
-    width:50%;
-    transform: rotate(30deg);
-    
+
+.navbar {
+    padding: 0 0 4.5rem;
 }
 
-.navbar{
-    padding:0 0 4.5rem;
-}
-
-.nav-link{
+.nav-link {
     font-family: "Montserrat";
     font-size: 1.2rem;
 }
@@ -47,8 +55,23 @@ h1 {
 }
 
 .container-fluid {
-    padding: 1rem 15%;
-    border: 3px solid purple;
+    padding: 3% 15%;
+    width: 100vw;
+ 
+
+
+}
+
+
+
+
+#title-image {
+    width: 50%;
+    transform: rotate(30deg);
+    margin-top: 15%;
+
+
+
 }
 
 
@@ -68,9 +91,43 @@ nav ul {
 }
 
 .my-btn {
-    border-radius: 2rem !important;
+    border-radius: 2rem ;
 }
 
-.left-column{
+
+
+/* section-two */
+
+.info-icon {
+    font-size: 5rem;
+    color: #ef7182;
+    transition: color 0.3s, font-size 0.3s;
+    margin-bottom: 1rem;
+}
+
+.info-icon:hover{
+    color:#ff4c68;
+    font-size: 6rem;
+}
+
+#section-two {
+    margin-top: 8rem;
+}
+
+.info-section {
+
     text-align: center;
+    margin-bottom: 3em;
+    
+    
+}
+
+.info-title {
+    font-size: 1.5rem;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+}
+
+.info-subtitle{
+    color:#8f8f8f;
 }
