--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,16 @@
      
 }
 
+.b-red{
+    border:2px solid yellow;
+
+    
+}
+
+html{
+    margin: 0 !important;
+}
+
 
 #title {
     background-color: #ff4c68;
@@ -13,6 +23,7 @@
 
 body {
     font-family: 'Montserrat', sans-serif;
+    width: 100%;
 
 
 }
@@ -56,7 +67,7 @@ h1 {
 
 .container-fluid {
     padding: 3% 15%;
-    width: 100vw;
+    
  
 
 
@@ -77,17 +88,10 @@ h1 {
 
 
 
-nav {
-
-    position: relative;
-    margin: 1rem 0;
 
 
-}
-
-nav ul {
-    position: absolute;
-    right: 1rem;
+.navbar-nav {
+    margin: 0 0 0 auto;
 }
 
 .my-btn {
@@ -131,3 +135,9 @@ nav ul {
 .info-subtitle{
     color:#8f8f8f;
 }
+
+
+html, body {
+    margin: 0;
+    padding: 0;
+  }  
