--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@
 }
 
 html{
-    margin: 0 !important;
+   
 }
 
 
@@ -23,7 +23,6 @@ html{
 
 body {
     font-family: 'Montserrat', sans-serif;
-    width: 100%;
 
 
 }
@@ -62,14 +61,11 @@ body {
 h1 {
     font-family: 'Montserrat', sans-serif;
     font-weight: 900;
-    font-size: 3.5rem;
+    font-size: 3rem;
 }
 
 .container-fluid {
-    padding: 3% 15%;
-    
- 
-
+    padding: 3% 10%;
 
 }
 
@@ -80,15 +76,7 @@ h1 {
     width: 50%;
     transform: rotate(30deg);
     margin-top: 15%;
-
-
-
 }
-
-
-
-
-
 
 .navbar-nav {
     margin: 0 0 0 auto;
@@ -103,15 +91,15 @@ h1 {
 /* section-two */
 
 .info-icon {
-    font-size: 5rem;
     color: #ef7182;
-    transition: color 0.3s, font-size 0.3s;
     margin-bottom: 1rem;
+    font-size: 5rem;
+
+    
 }
 
 .info-icon:hover{
     color:#ff4c68;
-    font-size: 6rem;
 }
 
 #section-two {
@@ -121,7 +109,7 @@ h1 {
 .info-section {
 
     text-align: center;
-    margin-bottom: 3em;
+    margin-bottom: 6em;
     
     
 }
@@ -141,3 +129,50 @@ html, body {
     margin: 0;
     padding: 0;
   }  
+
+
+
+/*   Testimonials Section */
+
+
+#testimonials{
+ background-color: #ef7182;
+ text-align: center;
+ color: #fff;
+ height: 50%;
+
+}
+
+#testimonials h2{
+   
+        font-family: 'Montserrat', sans-serif;
+        line-height: 1.5;
+        font-weight: bold;
+        font-size: 3rem;
+        
+
+}
+
+.carousel-item{
+    padding:5% 19%;
+
+}
+
+.testimonial-image{
+     border-radius: 100%;
+     width:20%;
+     margin: auto 20px;
+}
+
+#press{
+    text-align: center;
+    background-color: #ef7182;
+    padding-bottom: 3%;
+
+}
+
+.press-logo{
+    margin:20px 20px 50px;
+    max-width: 10%;
+}
+  
